Add header menu

--- a/dev/pug/modules/consult-form.pug
+++ b/dev/pug/modules/consult-form.pug
@@ -12,4 +12,4 @@ section.section.section--blue
             p._approwe
                 |Отправляя заявку, вы даете согласие на обработку своих персональных данных и соглашаетесь
                 br
-                a._approwe-link(href='#', title='Политика кофмденциальности') с политикой конфиденциальности
+                a._approve-link(href='#', title='Политика конфиденциальности') с политикой конфиденциальности
