--- a/dev/pug/modules/page-title-blue.pug
+++ b/dev/pug/modules/page-title-blue.pug
@@ -1,4 +1,4 @@
-section.section.section--blue
+section.section.section--blue.section--with-bg(style='background-image: url(../images/content/med-top-bg.png)')
     .b-page-title
       - var newStr = title.split(' ')
       h1.h1._text.-one-word
