--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -28,6 +28,35 @@
     ]
 
 -
+    var headerMenu = [
+        {
+            name: 'Услуги',
+            link: 'cases.html',
+            mega: true
+        },
+        {
+            name: 'Кейсы',
+            link: 'cases.html'
+        },
+        {
+            name: 'Компания',
+            link: 'company.html'
+        },
+        {
+            name: 'Вакансии',
+            link: 'vacancy.html'
+        },
+        {
+            name: 'Блог',
+            link: 'blog.html'
+        },
+        {
+            name: 'Контакты',
+            link: 'contacts.html'
+        },
+    ]
+
+-
     var mainMenu = [
         {
             name: 'Наши кейсы',
@@ -561,7 +590,7 @@
                     num: '+812%',
                     desc: 'прирост количества <br>заявок',
                 },
-
+            
             ],
         },
         {
@@ -596,7 +625,7 @@
                 },
             ],
         },
-
+    
     ]
 
 -
@@ -641,7 +670,7 @@
             src: 'images/content/clients/mebgrad.png',
             alt: 'Мебельград'
         },
-
+    
     ]
 
 -
@@ -787,7 +816,7 @@
                 desc: 'Гарантия 6 мес',
             },
         ]
-
+        
     }
 
 -
@@ -807,7 +836,7 @@
                 desc: 'Создаём сайты с учётом требований поисковиков',
             },
         ]
-
+        
     }
 
 -
@@ -827,7 +856,7 @@
                 desc: 'Индивидуальне условия обслуживания',
             },
         ]
-
+        
     }
 
 -
@@ -847,7 +876,7 @@
                 desc: 'Финансовые гарантии!',
             },
         ]
-
+        
     }
 
 -
@@ -867,7 +896,7 @@
                 desc: 'Передовые технологии управления',
             },
         ]
-
+        
     }
 
 -
@@ -887,7 +916,7 @@
                 desc: 'Используем только белые методы',
             },
         ]
-
+        
     }
 
 -
