--- a/dev/static/styles/modules/advantages.sass
+++ b/dev/static/styles/modules/advantages.sass
@@ -20,9 +20,16 @@
         min-width: 94px
         height: 94px
         fill: $accent
+        +sm-block()
+            width: 60px
+            max-width: 60px
+            min-width: 60px
+            height: 60px
     &__title
         font-size: 30px
         line-height: 40px
         font-weight: 500
         margin-bottom: 30px
         margin-top: 27px
+        +sm-block()
+            margin-top: 0
