--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -81,6 +81,8 @@
 
 
 .header
+    font-size: 16px
+    line-height: 24px
     height: 120px
     position: fixed
     top: 0
@@ -147,6 +149,7 @@
             display: none
 
     &__btn
+        height: 44px
         +sm-block()
             display: none
 
