--- a/dev/static/styles/modules/price-table.sass
+++ b/dev/static/styles/modules/price-table.sass
@@ -44,6 +44,9 @@
         font-size: 40px
         line-height: 50px
         font-weight: 500
+        +sm-block()
+            font-size: 30px
+            line-height: 38px
     &__small
         font-size: 14px
         line-height: 21px
