--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -80,6 +80,7 @@
 
         &:hover, &:focus
             background-color: $white
+            color: $accent
 
             svg
                 fill: $accent
