Add services menu in data

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -55,6 +55,76 @@
             link: 'contacts.html'
         },
     ]
+    
+-
+    var newMega = [
+        {
+            name: 'Продвижение сайтов',
+            link: '#',
+            sub: [
+                {
+                    name: 'Управление репутацией в поиске',
+                    link: '#'
+                },
+            ]
+        },
+        {
+            name: 'Контекстная реклама',
+            link: '#',
+            sub: [
+                {
+                    name: 'Медийная и баннерная реклама',
+                    link: '#'
+                },
+            ]
+        },
+        {
+            name: 'Маркетинг в соцсетях',
+            link: '#',
+            sub: [
+                {
+                    name: 'Таргетированная реклама',
+                    link: '#'
+                },
+                {
+                    name: 'Продвижение и реклама Instagram',
+                    link: '#'
+                },
+            ]
+        },
+        {
+            name: 'Создание сайтов',
+            link: '#',
+            sub: [
+                {
+                    name: 'Создание интернет-магазина',
+                    link: '#'
+                },
+            ]
+        },
+        {
+            name: 'Создание интернет-магазина',
+            link: '#',
+        },
+        {
+            name: 'Отраслевая экспертиза',
+            link: false,
+            sub: [
+                {
+                    name: 'Продвижение медицинских клиник',
+                    link: '#'
+                },
+                {
+                    name: 'Продвижение стоматологии',
+                    link: '#'
+                },
+                {
+                    name: 'Реклама медпрепаратов',
+                    link: '#'
+                },
+            ]
+        },
+    ]
 
 -
     var mainMenu = [
