--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -79,7 +79,7 @@
             ]
         },
         {
-            name: 'Маркетинг в соцсетях',
+            name: 'Маркетинг в соцсетях',
             link: '#',
             sub: [
                 {
@@ -103,7 +103,7 @@
             ]
         },
         {
-            name: 'Создание интернет-магазина',
+            name: 'Техническая поддержка',
             link: '#',
         },
         {
