--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -160,7 +160,7 @@
         color: $accent
         & > *
             z-index: 5
-        +md-block()
+        +sm-block()
             display: none
 
         .icon-triangle-down
