--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -78,6 +78,8 @@
         &__cities
             a
                 color: $accent
+        &__menu-link
+            color: $white
 
 
 .header
@@ -120,8 +122,6 @@
             &:not(:last-child)
                 margin-right: 40px
 
-
-
     &__logo
         &-icon
             max-width: 121px
@@ -133,13 +133,6 @@
             svg
                 fill: $accent
 
-    &__phone
-        +sm-block()
-            order: 2
-        +xs-block()
-            margin-right: 10px !important
-            a
-                font-size: 13px
 
     &__showreel
         display: flex
@@ -147,6 +140,28 @@
             margin-right: 10px
         +md-block()
             display: none
+
+    &__link
+        display: flex
+        align-items: center
+
+        svg
+            width: 17px
+            height: 17px
+            margin-left: 10px
+            fill: $accent
+
+        +xs-block()
+            font-size: 16px
+            line-height: 22px
+
+    &__phone
+        +xs-block()
+            display: none
+        +xs-block()
+            margin-right: 10px !important
+            a
+                font-size: 13px
 
     &__btn
         height: 44px
@@ -195,19 +210,5 @@
         &:not(:last-child)
             margin-bottom: 10px
 
-
-    &__link
-        display: flex
-        align-items: center
-
-        svg
-            width: 17px
-            height: 17px
-            margin-left: 10px
-            fill: $accent
-
-        +xs-block()
-            font-size: 16px
-            line-height: 22px
 
 @import "estore-line"
