--- a/dev/static/styles/modules/main-nav/main-nav.sass
+++ b/dev/static/styles/modules/main-nav/main-nav.sass
@@ -1,10 +1,12 @@
 =megaItem($h: 30)
     opacity: 0
-    transform: translate3d(0, $h * -1px ,0)
-    transition: all .5s cubic-bezier(.785,.135,.15,.86)
+    transform: translate3d(0, $h * -1px, 0)
+    transition: all .5s cubic-bezier(.785, .135, .15, .86)
+
 =megaItemView()
     opacity: 1
     transform: none
+
 =delayLoop($start: 0.3)
     @for $i from 1 through 10
         &:nth-child(#{$i})
@@ -15,14 +17,18 @@
         width: 100%
         +md-block()
             display: none
+
     &__menu-list
         display: flex
         justify-content: center
+
     &__menu-item
         &:not(:last-child)
             margin-right: 15px
+
     &__menu-link
         color: $black
+
         &:hover, &:focus, &--current
             font-weight: bold
 
@@ -32,28 +38,37 @@
     left: 0
     top: 0
     z-index: 5
-    min-height: 100vh
+    height: 100vh
     background-color: rgba($accent, .85)
     backdrop-filter: blur(10px)
     padding-top: 150px
+    padding-bottom: 50px
     transform: translate3d(0, -100%, 0)
-    transition: transform .5s cubic-bezier(.785,.135,.15,.86)
+    transition: transform .5s cubic-bezier(.785, .135, .15, .86)
     +xs-block()
         padding-top: 120px
 
+    &__wrap
+        height: 100%
+        overflow-y: auto
+
     &.is-active
         transform: none
+
         .megamenu__second-item,
         .services-list__item,
         .megamenu__icon,
         .megamenu__btn
             +megaItemView()
 
-
     &__cols
         +row-flex()
         padding-top: 35px
         border-top: 1px solid rgba($white, .3)
+        +sm-block()
+            padding-top: 0
+            border-top: none
+
     &__services-list
         +col()
         +size(12)
@@ -64,38 +79,121 @@
         +size(12)
         display: flex
         justify-content: space-between
+        +sm-block()
+            flex-direction: column
 
     &__second-list
         display: flex
+        +sm-block()
+            flex-direction: column
+            width: 100%
+
+
     &__second-item
         +megaItem()
         +delayLoop(1)
         font-size: 22px
         line-height: 30px
         font-weight: bold
+        +sm-block()
+            margin-bottom: 20px
+
         &:not(:last-child)
             margin-right: 20px
+    &__actions
+        display: none
+        padding-top: 50px
+        padding-bottom: 46px
+        +sm-block()
+            display: flex
+            flex-direction: column
+            &-second
+                display: flex
+                justify-content: space-between
+                align-items: center
+                padding-top: 15px
+                margin-top: 15px
+                border-top: 1px solid rgba($white, .2)
+                +xs-block()
+                    flex-direction: column
+                    align-items: stretch
+
+    &__phone
+        a
+            color: $white
+
+    &__btn
+        height: 44px
+        color: $white
+        border: 1px solid $white
+        &:hover, &:focus
+            background-color: $white
+            color: $accent
+        +xs-block()
+            margin-top: 15px
+
+    &__city
+        display: flex
+        margin-right: 40px
+        position: relative
+        color: $white
+        & > *
+            z-index: 5
+
+        .icon-triangle-down
+            width: 11px
+            height: 10px
+            fill: $white
+            transition: all 0.3s ease
+
+        &:hover
+            .megamenu__cities
+                transform: none
+                opacity: 1
+                pointer-events: auto
+            .icon-triangle-down
+                transform: rotate(180deg)
+
+    &__cities
+        position: absolute
+        z-index: 4
+        left: 0
+        padding-top: 30px
+        top: 100%
+        white-space: nowrap
+        pointer-events: none
+        opacity: 0
+        transform: translateY(10px)
+        transition: all .3s ease
+    &__subcities
+        padding: 30px 25px !important
+        background-color: rgba($grey, .9)
+        backdrop-filter: blur(6px)
+    &__subcity
+        &:not(:last-child)
+            margin-bottom: 10px
+
     &__second-link
         color: $white
+
         &:hover, &:focus
             color: darken($white, 30%)
-
 
     &__social
         display: flex
         justify-content: space-between
         +sm-block()
-            position: fixed
-            bottom: 0
-            right: 0
-            left: 0
-            flex-direction: row
-            justify-content: center
+            justify-content: flex-start
             flex: 1
+
     &__icon
         +megaItem()
         +delayLoop(1)
         margin-left: 40px
+        +sm-block()
+            &:first-child
+                margin-left: 0
+
         &:hover, &:focus
             svg
                 fill: darken($white, 30%)
@@ -104,15 +202,17 @@
         height: 26px
         fill: $white
 
-
 .services-list
-    +row-flex()
+    display: flex
+    flex-wrap: wrap
+
     &__item
         +megaItem()
         +delayLoop()
         +col()
         +size(2)
         +size-md(4)
+        +size-sm(12)
         font-size: 18px
         line-height: 24px
         font-weight: bold
@@ -120,27 +220,75 @@
         flex-direction: column
         +md-block()
             margin-bottom: 30px
+        +sm-block()
+            border-bottom: 1px solid rgba($white, .3)
+            margin-bottom: 0
+            &:first-child
+                border-top: 1px solid rgba($white, .3)
+
     &__link
         color: $white
         display: inline-block
         height: 48px
         +md-block()
             height: auto
+        +sm-block()
+            display: flex
+            min-height: 70px
+            align-items: center
+            justify-content: space-between
+
         &--empty
             opacity: .75
             pointer-events: none
+
         &:hover, &:focus
             color: darken($white, 30%)
+
+    &__mob-plus
+        position: relative
+        display: none
+        +sm-block()
+            display: inline-flex
+            width: 31px
+            height: 31px
+            cursor: pointer
+            &::before, &::after
+                content: ''
+                display: block
+                position: absolute
+                width: 100%
+                height: 1px
+                left: 0
+                top: 50%
+                background-color: rgba($white, .3)
+            &::after
+                height: 100%
+                width: 1px
+                top: 0
+                left: 50%
+            &--active
+                &::after
+                    display: none
+
     &__sublist
         margin-top: 20px
+        +sm-block()
+            display: none
+            margin-top: 0
+            margin-bottom: 30px
+
     &__subitem
         font-size: 14px
         line-height: 20px
         font-weight: 300
+
         &:not(:last-child)
             margin-bottom: 14px
+
     &__subitem-link
         color: $white
+
         &:hover, &:focus
             color: darken($white, 30%)
 
@@ -153,6 +301,7 @@
     margin-left: 30px
     +md-block()
         display: block
+
     &:hover, &:focus
         .sandwich__line
             background-color: $accent
