Fix sformat card margin

--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -232,6 +232,7 @@
         background-color: $grey
         display: flex
         flex-direction: column
+        margin-bottom: 30px
         +sm-block()
             &:not(:last-child)
                 margin-bottom: 20px
