--- a/dev/pug/modules/page-title-blue.pug
+++ b/dev/pug/modules/page-title-blue.pug
@@ -1,4 +1,4 @@
-section.section.section--blue.section--with-bg(style='background-image: url(../images/content/med-top-bg.png)')
+section.section.section--blue.section--wide.section--with-bg(style='background-image: url(../images/content/med-top-bg.png)')
     .b-page-title
       - var newStr = title.split(' ')
       h1.h1._text.-one-word
@@ -12,4 +12,3 @@ section.section.section--blue.section--with-bg(style='background-image: url(../i
       ._price от 15 000 ₽*
       ._small-text
           p._small-item * Скидка 3, 6, 12% на услугу SEO при оплате 3, 6 и 12 месяцев соответственно
-          p._small-item ** 1 месяц в подарок при оплате 6 месяцев
