--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -70,7 +70,7 @@
         },
         {
             name: 'Контекстная реклама',
-            link: '#',
+            link: 'context.html',
             sub: [
                 {
                     name: 'Медийная и баннерная реклама',
