--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -136,6 +136,9 @@ button
         color: $white
         padding-right: 30px
         padding-left: 30px
+    &--wide
+        padding-left: 0
+        padding-right: 0
     &--top-line
         border-top: 1px solid rgba($main-font-color, .2)
         margin-top: 60px
@@ -211,7 +214,7 @@ ol:not([class])
 
 .full-block--blue
     background-color: $accent
-
+    margin-bottom: 50px
 
 .page-form
     padding-top: 40px
