Add new price table

--- a/dev/pug/context.pug
+++ b/dev/pug/context.pug
@@ -8,6 +8,7 @@ block content
     include modules/page-title
     +badges(contextBadges)
     +taber(tabsContext)
+    include pages/med-site/price-table
     include modules/topcases
     +feedbackSlider(feedbacks, 'Отзывы')
     +taber(tabsAdStep, 'Этапы запуска рекламной кампании', 'light')
