--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -1397,111 +1397,91 @@
         {
             id: 'basic',
             popular: false,
-            title: `Тариф «Базовый»`,
-            text: `Решение разработано для эффективного привлечения целевого органического трафика из региональной выдачи, включает в себя необходимый набор для привлечения клиентов из Яндекса и Google.`,
+            title: `Старт`,
+            text: `Подходит для монобренда или услуги, невысокого спроса, регионального рынка`,
             features: [
                 {
-                    name: 'Детальная аналитика',
-                    list: [
-                        'Проводим бесплатный аудит сайта',
-                        'Прогнозируем охват и вывод запросов в топ',
-                        'Ежеквартально осуществляем аудит юзабилити',
-                    ]
+                    name: 'Площадки',
+                    list: 'Яндекс.Директ, Google Ads'
                 },
                 {
-                    name: 'Эффективные решения',
-                    list: [
-                        'Продвигаем 200 запросов',
-                        'Исправляем ошибки оптимизации',
-                        'Ежеквартально бесплатно расширяем семантическое ядро',
-                        'Настраиваем call-tracking',
-                        'Проводим необходимые доработки по юзабилити',
-                        'Продвигаем сайты в Яндексе, Google',
-                    ]
+                    name: 'Инструменты',
+                    list: 'Поисковая реклама, РСЯ, КМС'
                 },
                 {
-                    name: 'Прозрачная отчетность',
-                    list: [
-                        'Ежемесячно предоставляем детальные отчеты о проделанной работе',
-                        'Отчет по позициям всегда доступен в личном кабинете',
-                    ]
+                    name: 'Аналитика',
+                    list: 'Статический коллтрекинг, Яндекс.Метрика'
+                },
+                {
+                    name: 'Увеличение конверсий',
+                    list: '—'
+                },
+                {
+                    name: 'Часы специалиста',
+                    list: '8 часов/месяц'
                 },
             ],
-            price: 15000
+            price: 12000,
+            priceSupport: 10000
         },
         {
             id: 'optima',
             popular: true,
-            title: `Тариф «Оптима»`,
-            text: `Решение дает возможность быстрее получать целевой трафик из поисковых систем, включает в себя оптимальный набор работ для привлечения клиентов из Яндекса и Google.`,
+            title: `Оптима`,
+            text: `Подходит для небольших интернет-магазинов, услуг в B2B`,
             features: [
                 {
-                    name: 'Детальная аналитика',
-                    list: [
-                        'Проводим бесплатный аудит сайта',
-                        'Прогнозируем охват и вывод запросов в топ',
-                        'Ежеквартально осуществляем аудит юзабилити',
-                        'Ежеквартально анализируем эффективность канала SEO',
-                        'Проводим ежеквартальный анализ репутации в выдаче',
-                    ]
+                    name: 'Площадки',
+                    list: 'Яндекс.Директ, Google Ads'
                 },
                 {
-                    name: 'Эффективные решения',
-                    list: [
-                        'Продвигаем 300 запросов',
-                        'Исправляем ошибки оптимизации',
-                        'Ежеквартально бесплатно расширяем семантическое ядро',
-                        'Настраиваем call-tracking',
-                        'Проводим необходимые доработки по юзабилити',
-                        'Продвигаем сайты в Яндексе, Google',
-                    ]
+                    name: 'Инструменты',
+                    list: 'Поисковая реклама, РСЯ, КМС'
                 },
                 {
-                    name: 'Прозрачная отчетность',
-                    list: [
-                        'Ежемесячно предоставляем детальные отчеты о проделанной работе',
-                        'Отчет по позициям всегда доступен в личном кабинете',
-                    ]
+                    name: 'Аналитика',
+                    list: 'Динамический коллтрекинг, настройка электронной коммерции'
+                },
+                {
+                    name: 'Увеличение конверсий',
+                    list: '—'
+                },
+                {
+                    name: 'Часы специалиста',
+                    list: '12 часов/месяц'
                 },
             ],
-            price: 30000
+            price: 18000,
+            priceSupport: 15000
         },
         {
             id: 'vip',
             popular: true,
-            title: `Тариф «VIP»`,
-            text: `Тариф объединяет лучшие инструменты продвижения, работы с повышением конверсии и репутацией. `,
+            title: `VIP`,
+            text: `Для крупных интернет-магазинов: широкая география, высокий спрос, большая SKU`,
             features: [
                 {
-                    name: 'Детальная аналитика',
-                    list: [
-                        'Проводим бесплатный аудит сайта',
-                        'Прогнозируем охват и вывод запросов в топ',
-                        'Ежемесячно осуществляем аудит юзабилити',
-                        'Проводим ежеквартальный анализ: репутации в выдаче, целевой аудитории, торгового предложения',
-                        'Ежемесячно выявляем проблемы в рекламной кампании, звонках и воронке продаж',
-                    ]
+                    name: 'Площадки',
+                    list: 'Яндекс.Директ, Google Ads'
                 },
                 {
-                    name: 'Эффективные решения',
-                    list: [
-                        'Продвигаем 500 запросов',
-                        'Исправляем ошибки оптимизации',
-                        'Ежеквартально бесплатно расширяем семантическое ядро',
-                        'Настраиваем call-tracking',
-                        'Проводим необходимые доработки по юзабилити',
-                        'Продвигаем сайты в Яндексе, Google, Яндекс mobile, Google mobile',
-                        'Размещаем 5 отзывов на сайте ежемесячно',
-                    ]
+                    name: 'Инструменты',
+                    list: 'Поисковая реклама, РСЯ, КМС, ретаргетинг/ ремаркетинг, медийная реклама, товарные кампании, полигоны'
                 },
                 {
-                    name: 'Прозрачная отчетность',
-                    list: [
-                        'Ежемесячно предоставляем детальные отчеты о проделанной работе',
-                        'Отчет по позициям всегда доступен в личном кабинете',
-                    ]
+                    name: 'Аналитика',
+                    list: 'Углубленная настройка аналитики, кастомные отчеты, многоканальная атрибуция, анализ микроконверсий'
+                },
+                {
+                    name: 'Увеличение конверсий',
+                    list: 'Есть'
+                },
+                {
+                    name: 'Часы специалиста',
+                    list: '20 часов/месяц'
                 },
             ],
-            price: 50000
+            price: 30000,
+            priceSupport: 25000
         },
     ]
