--- a/dev/static/styles/modules/price-table.sass
+++ b/dev/static/styles/modules/price-table.sass
@@ -1,56 +1,94 @@
 .price-table__list
-    +row-flex()
-    +md-block()
-        justify-content: center
+    display: flex
+    overflow-x: scroll
+    -webkit-overflow-scrolling: touch
+    overflow-scrolling: touch
+
 .price-table__item
-    +col()
-    +size(4)
-    +size-md(12)
+    flex-basis: 32%
+    min-width: 235px
+
+    &:not(:last-child)
+        margin-right: 2%
+
 .price-table-item
     display: flex
     flex-direction: column
     position: relative
     background-color: $grey
-    padding: 40px 39px
+    padding: 30px 25px 40px
     margin-bottom: 30px
     max-width: 600px
+
     &__title
-        font-size: 38px
-        line-height: 50px
-        margin-bottom: 40px
-        font-weight: 200
-    &__text
-        margin-bottom: 40px
-    &__feature
-        margin-bottom: 40px
-    &__feature-title
-        margin-bottom: 15px
-        font-weight: 500
-    &__feature-item
-        position: relative
-        padding-left: 35px
-        &:not(:last-child)
-            margin-bottom: 10px
-        &::before
-            position: absolute
-            left: 0
-            top: 0
-            display: inline-block
-            content: '—'
-            color: $accent
-    &__price
-        margin-top: auto
-        margin-bottom: 10px
         font-size: 40px
         line-height: 50px
+        margin-bottom: 20px
         font-weight: 500
-        +sm-block()
-            font-size: 30px
-            line-height: 38px
-    &__small
+
+    &__text
+        font-size: 18px
+        margin-bottom: 20px
+
+    &__features
+        margin-bottom: 20px
+
+    &__feature
+        display: flex
+        margin-bottom: 5px
         font-size: 14px
-        line-height: 21px
-        margin-bottom: 40px
+        line-height: 18px
+        +mds-block()
+            flex-direction: column
+
+    &__feature-title
+        color: #828282
+        width: 90px
+        min-width: 90px
+        flex-basis: 90px
+        margin-right: 10px
+        +mds-block()
+            margin-right: 0
+            width: 100%
+            flex-basis: 100%
+
+    &__feature-item
+        color: #4f4f4f
+
+    &__price-wrap
+        border-top: 1px solid rgba($black, .1)
+        padding-top: 20px
+        display: flex
+        margin-top: auto
+        margin-bottom: 30px
+        +md-block()
+            flex-direction: column
+
+    &__price-item
+        flex: 1 0 0
+
+        &:not(:last-child)
+            margin-right: 15px
+            +md-block()
+                margin-right: 0
+                margin-bottom: 15px
+
+    &__price
+        font-size: 24px
+        line-height: 32px
+        font-weight: 500
+        color: $accent
+
+
+    &__small
+        font-size: 16px
+        line-height: 20px
+
+        &--light
+            font-size: 12px
+            line-height: 17px
+            color: #828282
+
     &__badge
         position: absolute
         top: 0
@@ -60,6 +98,12 @@
         padding: 5px 10px
         color: $white
         background-color: $accent
+
     &__btn-wrap
         display: flex
         justify-content: center
+
+    &__btn
+        +mds-block()
+            font-size: 16px
+            line-height: 20px
