--- a/dev/static/styles/modules/taber.sass
+++ b/dev/static/styles/modules/taber.sass
@@ -74,7 +74,7 @@
     &__title-items
         +sm-block()
             display: flex
-            overflow: scroll
+            overflow-x: scroll
             overflow-scrolling: touch
             padding-bottom: 20px !important
     &__title-item
