--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -81,6 +81,9 @@
         &__menu-link
             color: $white
 
+            &:hover, &:focus, &--current
+                color: darken($white, 30%)
+
 
 .header
     font-size: 16px
