Add range calculator layout

--- a/dev/pug/context.pug
+++ b/dev/pug/context.pug
@@ -11,6 +11,7 @@ block content
     include pages/med-site/price-table
     include modules/topcases
     +feedbackSlider(feedbacks, 'Отзывы')
+    include modules/range-calculator
     +taber(tabsAdStep, 'Этапы запуска рекламной кампании', 'light')
     +feedbackSlider(metrix, 'Ключевые метрики', 'feedback--rules')
     include modules/consult-form
