--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -1485,3 +1485,57 @@
             priceSupport: 25000
         },
     ]
+    
+-
+    var calculator = {
+        startPrice: 15000,
+        concurrent: [
+            {
+                name: `Конкуренции почти нет`,
+                k: 1,
+            },
+            {
+                name: `Конкуренты есть, но жить можно`,
+                k: 1.4,
+                isDefault: true
+            },
+            {
+                name: `Конкуренция высокая, как в пластиковых окнах`,
+                k: 2,
+            },
+        ],
+        regions: [
+            {
+                name: `Продвижение по одному региону (не Москва и не Санкт-Петербург)`,
+                k: 1,
+                isDefault: true
+            },
+            {
+                name: `Продвижение по 2–3 регионам`,
+                k: 1.5,
+            },
+            {
+                name: `Продвижение в столицах (Москва, Санкт-Петербург)`,
+                k: 2.5,
+            },
+            {
+                name: `По всей РФ, а еще и Казахстан с Беларусью`,
+                k: 5,
+            },
+        ],
+        requests: [
+            {
+                name: `Начнем с урезанного количества запросов, посмотрим на результаты, потом расширимся до полной`,
+                k: 1,
+            },
+            {
+                name: `Берем стандартный набор запросов по всем категориям`,
+                k: 1.2,
+                isDefault: true
+            },
+            {
+                name: `Берем максимальный набор запросов, чтобы получить как можно больше посетителей`,
+                k: 1.8,
+            },
+        ],
+    }
