--- a/dev/static/styles/modules/range-calculator.sass
+++ b/dev/static/styles/modules/range-calculator.sass
@@ -9,6 +9,9 @@
         +col()
         +size(4)
         +size-sm(12)
+        +sm-block()
+            &:not(:last-child)
+                margin-bottom: 25px
 
     &__range-input
         height: 10px
@@ -118,6 +121,9 @@
         margin-top: 30px
         font-weight: 500
         text-align: center
+        +sm-block()
+            font-size: 30px
+            line-height: 40px
 
     &__btn-wrap
         display: flex
