--- a/dev/static/styles/modules/advantages.sass
+++ b/dev/static/styles/modules/advantages.sass
@@ -33,3 +33,5 @@
         margin-top: 27px
         +sm-block()
             margin-top: 0
+            font-size: 24px
+            line-height: 28px
