Add new svg icons

--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -489,6 +489,10 @@
         line-height: 55px
         font-weight: 200
 
+        +sm-block()
+            font-size: 25px
+            line-height: 30px
+
         &:not(:last-child)
             margin-bottom: 30px
 
